syntax = "proto3";

package consignment;

option go_package = "/consignment";

service ConsignmentService {
  rpc CreateConsignment (Consignment) returns (Response){}
  // 查看托运货物的信息
  rpc GetConsignments (GetRequest) returns (Response){}
}

// 货物
message Consignment {
  string id = 1;               // 货物编号
  string description = 2;      // 货物描述
  int32 weight = 3;            // 货物重量
  repeated Container containers = 4; // 这批货有哪些集装箱
  string vessel_id = 5;        // 承运的货轮
}

// 返回消息(托运结果)
message Response {
  bool created = 1;         // 托运成功
  Consignment consignment = 2;  // 托运的货物
  repeated Consignment consignments = 3; // 目前所有托运的货物
}

// 集装箱
message Container {
  string id = 1;  // 集装箱编号
  string customer_id = 2; // 所属客户编号
  string origin = 3;      // 出发地
  string user_id = 4;     // 所属用户编号
}

// 查看货物信息的请求
// 客户端想要从服务端请求数据，必须有请求格式，哪怕为空
message GetRequest{

}