syntax = "proto3";

package vessel;

option go_package = "/vessel";

service VesselService {
  // 检查是否有空闲货轮
  rpc FindAvailable (Specification) returns (Response){}
  // 创建货轮
  rpc Create(Vessel) returns (Response){}
}

message Vessel{
  string id = 1;        // 编号
  int32 capacity = 2;   // 最大容量（集装箱个数）
  int32 max_weight = 3; // 最大载量
  string name = 4;      // 名字
  bool available = 5;   // 是否可用
}

//等待运送的货物
message Specification {
  int32 capacity = 1; // 容量（包含的集装箱个数）
  int32 max_weight = 2; // 重量
}

// 返回的货轮信息
message Response {
  Vessel vessel = 1;
  repeated Vessel vessels = 2;
  bool created = 3;
}